# FlowRename

./: .gitignore  .npmrc  .prettierignore  Cargo.toml  README.md  eslint.config.js  generate_icons.py  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: build.ps1  build.sh  create-portable-zip.ps1  install-deps.ps1  install-deps.sh  run.ps1  run.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  undo_manager.rs
src-tauri/src/commands/: file_commands.rs  mod.rs  preview_commands.rs  rename_commands.rs
src-tauri/src/file_manager/: mod.rs  scanner.rs
src-tauri/src/metadata_reader/: exif_reader.rs  id3_reader.rs  mod.rs  video_reader.rs
src-tauri/src/method_engine/: mod.rs  pipeline.rs  traits.rs
src-tauri/src/methods/: mod.rs  p0_methods.rs  p1_methods.rs
src-tauri/src/models/: file_item.rs  metadata.rs  method_config.rs  mod.rs  video_metadata.rs
src-tauri/src/tag_system/: evaluator.rs  mod.rs  parser.rs
src-tauri/tests/unit/: models_test.rs  p0_methods_test.rs  pipeline_test.rs  scanner_test.rs  tag_system_test.rs  tauri_commands_test.rs
src/lib/: commands.ts  types.ts
src/lib/components/: AboutDialog.svelte  ControlPanel.svelte  FileList.svelte  MethodPanel.svelte  StatusBar.svelte  TagPanel.svelte  TitleBar.svelte
src/lib/components/method-editors/: AddEditor.svelte  ListEditor.svelte  MethodEditor.svelte  MoveEditor.svelte  NewCaseEditor.svelte  NewNameEditor.svelte  RemoveEditor.svelte  RenumberEditor.svelte  ReplaceEditor.svelte  TimestampEditor.svelte  TrimEditor.svelte
src/lib/stores/: app.ts  fileCategories.ts  theme.ts
src/lib/utils/: sort.ts
src/routes/: +layout.svelte  +page.svelte
