[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.dependencies]
# Core Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Text processing
regex = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Error handling
anyhow = "1"
thiserror = "1"

# File system traversal
walkdir = "2"

# Logging
log = "0.4"
env_logger = "0.10"

# Image metadata (EXIF)
kamadak-exif = "0.5"

# Audio metadata (ID3)
id3 = "1"
